--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "moment": "^2.29.1",
-    "next": "10.0.1",
+    "next": "^11.1.0",
     "react": "17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
-    "react-loading-skeleton": "^2.1.1",
-    "react-slick": "^0.27.13",
+    "react-icons": "^4.2.0",
+    "react-loading-skeleton": "^2.2.0",
+    "react-slick": "^0.27.14",
     "react-toastify": "^6.2.0",
-    "sass": "^1.30.0",
+    "sass": "^1.38.0",
     "slick-carousel": "^1.8.1"
   }
 }
